--- a/skin.ini
+++ b/skin.ini
@@ -18,15 +18,15 @@ Version: latest
 /Combo3: 244,250,37
 /Combo4: 0,191,255
 
-Combo1: 0, 96, 255
-Combo2: 255, 0, 66
-Combo3: 255,128,0
-Combo4: 0, 128, 0
+/Combo1: 0, 96, 255
+/Combo2: 255, 0, 66
+/Combo3: 255,128,0
+/Combo4: 0, 128, 0
 
-/Combo1: 254,245,212
-/Combo2: 255,222,187
-/Combo3: 239,186,214
-/Combo4: 218,218,252
+Combo1: 254,245,212
+Combo2: 255,222,187
+Combo3: 239,186,214
+Combo4: 218,218,252
 
 MenuGlow: 250,140,220
 
@@ -37,8 +37,10 @@ SliderTrackOverride: 0,0,0
 SpinnerApproachCircle: 255,255,255
 SongSelectActiveText: 0,0,0
 SongSelectInactiveText: 255,255,255
+InputOverlayText: 200, 200, 200
 
 [Fonts]
 HitCirclePrefix: default
 HitCircleOverlap: 150
 ScorePrefix: score
+ComboPrefix: combo
