--- a/skin.ini
+++ b/skin.ini
@@ -23,10 +23,18 @@ Version: latest
 /Combo3: 255,128,0
 /Combo4: 0, 128, 0
 
-Combo1: 254,245,212
-Combo2: 255,222,187
-Combo3: 239,186,214
-Combo4: 218,218,252
+/Combo1: 254,245,212
+/Combo2: 255,222,187
+/Combo3: 239,186,214
+/Combo4: 218,218,252
+
+/Combo1: 254,245,212
+/Combo2: 239,186,214
+/Combo3: 218,218,252
+
+Combo1: 192,255,255
+Combo2: 192,255,192
+Combo3: 192,192,255
 
 MenuGlow: 250,140,220
 
