--- a/skin.ini
+++ b/skin.ini
@@ -1,51 +1,24 @@
 [General]
 Name: - Shige Seoul 
 Author: Various Artists 
+Version: latest
 CursorRotate: 0
 CursorExpand: 0
 CursorCentre: 1
-HitCircleOverlayAboveNumer: 1
+HitCircleOverlayAboveNumer: 0
 SliderStyle: 2
-Version: latest
+SliderBallFlip: 0
+SpinnerFadePlayfield: 1
 
 [Colours]
-/Combo1: 253,255,255
-/Combo2: 255, 0, 66
-/Combo3: 141, 123, 196
-
-/Combo1: 0, 96, 255
-/Combo2: 255, 0, 66
-/Combo3: 244,250,37
-/Combo4: 0,191,255
-
-/Combo1: 0, 96, 255
-/Combo2: 255, 0, 66
-/Combo3: 255,128,0
-/Combo4: 0, 128, 0
-
-/Combo1: 254,245,212
-/Combo2: 255,222,187
-/Combo3: 239,186,214
-/Combo4: 218,218,252
-
-/Combo1: 254,245,212
-/Combo2: 239,186,214
-/Combo3: 218,218,252
-
-Combo1: 192,255,255
-Combo2: 192,255,192
-Combo3: 192,192,255
-
-MenuGlow: 250,140,220
-
-SliderBorder: 128,128,128
-/SliderBorder: 198, 168, 238
-SliderTrackOverride: 0,0,0
-/SliderTrackOverride: 3, 0, 5
-SpinnerApproachCircle: 255,255,255
+MenuGlow: 250, 140, 166
 SongSelectActiveText: 0,0,0
 SongSelectInactiveText: 255,255,255
 InputOverlayText: 200, 200, 200
+Combo1: 164, 104, 255
+Combo2: 67, 145, 255
+SliderBorder: 135, 135, 135
+SliderTrackOverride: 0,0,0
 
 [Fonts]
 HitCirclePrefix: default
